# worldquant

./: .gitignore  AGENTS.md  README.md  brain_miner.py  candidate_alphas_round3.txt  parallel_submit_goal.py  pyproject.toml  requirements.txt  seed_alphas.txt
candidates/manual/: candidate_alphas.txt  candidate_alphas_20260516_good_probe.txt  candidate_alphas_20260516_settings_expansion.txt  candidate_alphas_20260516_short_expansion.txt  candidate_alphas_20260516_targeted.txt  candidate_alphas_20260517_broad_lowuse.txt  candidate_alphas_20260517_earningstorpedo_followup.txt  candidate_alphas_20260517_lowuse_liquidity.txt  candidate_alphas_20260517_news_social_probe.txt  candidate_alphas_20260517_option_rescue.txt  candidate_alphas_20260517_settings_extension.txt  candidate_alphas_20260517_three_more.txt  candidate_alphas_20260518_more6.txt  (+113 more)
configs/: daily.yaml
docs/: daily_workflow.md  factor_mining_strategy_summary_2026-05-18.md  factor_mining_strategy_summary_2026-05-19.md  factor_mining_strategy_summary_2026-05-20.md  factor_mining_strategy_summary_2026-05-21.md  factor_mining_strategy_summary_2026-05-22.md  factor_mining_strategy_summary_2026-05-23.md  factor_mining_strategy_summary_2026-05-24.md  factor_mining_strategy_summary_2026-05-25.md  factor_mining_theory_for_beginners.md  recent_factor_mining_methodology.md
scheduler/: cron.example
state/: active_alphas.json  data_fields.json  skip_history.before_2026-05-13_cleanup.json
tests/: test_candidates.py  test_checks.py  test_config.py  test_daily_dry_run.py  test_report.py
wq_miner/: __init__.py
(+18 files in other folders)
