[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wq-miner"
version = "0.1.0"
description = "Daily WorldQuant BRAIN alpha mining toolkit"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "browser-cookie3==0.20.1",
]

[tool.setuptools.packages.find]
where = ["src"]
